--- a/example1/index.html
+++ b/example1/index.html
@@ -29,8 +29,8 @@
         <div>Romaji: <span class="ki_en">a</span></div>
 
         <div class="mnemonic">
-          <div class="m_hiragana"><img id="img_h" src="/mnemonics/h_a.png"></div>
-          <div class="m_katakana"><img id="img_k" src="/mnemonics/k_a.png"></div>
+          <div class="m_hiragana"><img id="img_h" src="/example1/mnemonics/h_a.png"></div>
+          <div class="m_katakana"><img id="img_k" src="/example1/mnemonics/k_a.png"></div>
         </div>
 
         <button class="btn" onclick="nextRandomKana();">Next Random</button>
